--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <nav id="sidebar">
             <div class="sidebar-header">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="search" ng-model="search"> 
-                    <div class="input-group-btn">
+                    <input type="text" class="form-control rfill" placeholder="Search" name="search" ng-model="search"> 
+                    <!-- <div class="input-group-btn">
                       <button class="btn btn-default" type="submit"><i class="fas fa-search"></i></button>
-                    </div>
+                    </div> -->
                   </div>
             </div>
 
@@ -41,7 +41,7 @@
 
             <ul class="list-unstyled CTAs">
                 <li>
-                    <a href="http://www.sdcorner.com" class="article">Raghu Web Site</a>
+                    <a href="http://www.sdcorner.com" class="article rfill">Raghu Web Site</a>
                 </li>
             </ul>
         </nav>
@@ -59,14 +59,14 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link title" href="#">Products</a>
+                            <li class="nav-item">
+                                <a class="nav-link rmenu" href="#">Products</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link title" href="#">Chat</a>
+                                <a class="nav-link rmenu" href="#">Chat</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link title" href="#">Contact</a>
+                                <a class="nav-link rmenu" href="#">Contact</a>
                             </li>
                         </ul>
                     </div>
