--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link rmenu" href="#">Products</a>
+                                <a class="nav-link" style="color: #7386D5;" href="#">Products</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link rmenu" href="#">Chat</a>
+                                <a class="nav-link" style="color: #7386D5;" href="#">Chat</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link rmenu" href="#">Contact</a>
+                                <a class="nav-link" style="color: #7386D5;" href="#">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -78,7 +78,7 @@
                         <span class="fas fa-angle-double-right pad2" ></span>
                     </button>
                 </div>
-                <div class="col">
+                <div class="col cview">
                     <div class="cview" ng-view>
                 </div>        
                 
